view tested on iphone X, fixed popup button

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -612,7 +612,7 @@ body {
       left: 14.5rem; } }
   @media only screen and (max-width: 24em) {
     .popup__btn {
-      left: 7.5rem; } }
+      left: 6.5rem; } }
   .popup__content {
     position: absolute;
     top: 50%;
