--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1058,7 +1058,7 @@ body {
       left: 14.5rem; } }
   @media only screen and (max-width: 24em) {
     .popup__btn {
-      left: 7.5rem; } }
+      left: 6.5rem; } }
   .popup__content {
     position: absolute;
     top: 50%;
